--- a/index.html
+++ b/index.html
@@ -15,81 +15,105 @@
   </style>
 </head>
 <body>
+  <ul>
   Product
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
+  <li>Overview</li>
+  <li>Pricing</li>
+  <li>Marketplace</li>
+  <li>Features</li>
+  <li>Integrations</li>
+</ul>
+<ul>
 
   Company
 
-  About
-  Team
-  Blog
-  Careers
+  <li>About</li>
+  <li>Team</li>
+  <li>Blog</li>
+  <li>Careers
+
+</ul>
+<ul>
 
   Connect
 
-  Contact
-  Newsletter
-  LinkedIn
+  <li>Contact</li>
+  <li>Newsletter</li>
+  <li>LinkedIn</li>
   
+</ul>
+
+<ul>
+
   Login
   Sign Up
+</ul>
 
-  A modern publishing platform
-  Grow your audience and build your online brand
+  <h1>A modern publishing platform</h1>
+  <h2>Grow your audience and build your online brand</h2>
 
-  Start for Free
-  Learn More
+  <button> Start for Free</button>
+  <button>Learn More</button>
 
-  Designed for the future
+  <h2>Designed for the future</h2>
 
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+  <h2>Introducing an extensible editor</h2>
+  <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
   The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
   videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
+  change the looks of a blog.</p>
 
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+  <h2>Robust content management</h2>
+  <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
 
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+  <h2>State of the Art Infrastructure</h2>
+  <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
 
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+  <h2>Free, open, simple</h2>
+  <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
   features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
 
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
+  <h2>Powerful tooling</h2>
+  <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+  capable of producing even the most complicated sites.</p>
+ <ul>
   Product
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
+  <li>Overview</li>
+  <li>Pricing</li>
+  <li>Marketplace</li>
+  <li>Features</li>
+  <li>Integrations</li>
+</ul>
+<ul>
 
   Company
 
-  About
-  Team
-  Blog
-  Careers
+  <li>About</li>
+  <li>Team</li>
+  <li>Blog</li>
+  <li>Careers
+
+</ul>
+<ul>
 
   Connect
+
+  <li>Contact</li>
+  <li>Newsletter</li>
+  <li>LinkedIn</li>
   
-  Contact
-  Newsletter
-  LinkedIn
+</ul>
+
+<ul>
+
+  Login
+  Sign Up
+</ul>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
