--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Blogr]</title>
+  <title>Rich & Sad | [Blogr]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="./index.css">
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body id="main-container">
   <ul>
+    <img src="./images/logo.svg">
   Product
+  <div class="theme-toggler">
+    <input class="theme-slider" id="theme-slider" type="checkbox">
+    <!--<span class="toggle_71bT">🌜</span>
+    <span class="toggle_71bT">🌞</span>-->
+  </div>
 
   <li>Overview</li>
   <li>Pricing</li>
@@ -57,6 +63,7 @@
   <button>Learn More</button>
 
   <h2>Designed for the future</h2>
+  <img src="./images/icon-hamburger.svg" height="200" width="200">
 
   <h2>Introducing an extensible editor</h2>
   <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
@@ -119,5 +126,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
