--- a/index.html
+++ b/index.html
@@ -1,131 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Rich & Sad | [Blogr]</title>
 
   <link rel="stylesheet" href="./index.css">
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
-</head>
-<body id="main-container">
-  <ul>
-    <img src="./images/logo.svg">
-  Product
-  <div class="theme-toggler">
-    <input class="theme-slider" id="theme-slider" type="checkbox">
-    <!--<span class="toggle_71bT">🌜</span>
-    <span class="toggle_71bT">🌞</span>-->
-  </div>
-
-  <li>Overview</li>
-  <li>Pricing</li>
-  <li>Marketplace</li>
-  <li>Features</li>
-  <li>Integrations</li>
-</ul>
-<ul>
-
-  Company
-
-  <li>About</li>
-  <li>Team</li>
-  <li>Blog</li>
-  <li>Careers
-
-</ul>
-<ul>
-
-  Connect
-
-  <li>Contact</li>
-  <li>Newsletter</li>
-  <li>LinkedIn</li>
+  </head>
   
-</ul>
-
-<ul>
-
-  Login
-  Sign Up
-</ul>
-
-  <h1>A modern publishing platform</h1>
-  <h2>Grow your audience and build your online brand</h2>
-
-  <button> Start for Free</button>
-  <button>Learn More</button>
-
-  <h2>Designed for the future</h2>
-  <img src="./images/icon-hamburger.svg" height="200" width="200">
-
-  <h2>Introducing an extensible editor</h2>
-  <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.</p>
-
-  <h2>Robust content management</h2>
-  <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
-
-  <h2>State of the Art Infrastructure</h2>
-  <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
-
-  <h2>Free, open, simple</h2>
-  <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
-
-  <h2>Powerful tooling</h2>
-  <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.</p>
- <ul>
-  Product
-
-  <li>Overview</li>
-  <li>Pricing</li>
-  <li>Marketplace</li>
-  <li>Features</li>
-  <li>Integrations</li>
-</ul>
-<ul>
-
-  Company
-
-  <li>About</li>
-  <li>Team</li>
-  <li>Blog</li>
-  <li>Careers
-
-</ul>
-<ul>
-
-  Connect
-
-  <li>Contact</li>
-  <li>Newsletter</li>
-  <li>LinkedIn</li>
+  <body id="main-container">
+    <div class="container">
+      <div class="header">
+        <div class="logo">
+          <img src="./images/logo.svg">
+        </div>
+        <div class="theme-toggler">
+          <input class="theme-slider" id="theme-slider" type="checkbox">
+          <!--<span class="toggle_71bT">🌜</span>
+        <span class="toggle_71bT">🌞</span>-->
+        </div>
   
-</ul>
-
-<ul>
-
-  Login
-  Sign Up
-</ul>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-  <script src="index.js"></script>
-</body>
-</html>
+        <div class="navbox">
+          <ul class="main-nav pull-left">
+            <li>Product</li>
+            <ul class="one">
+              <li>Overview</li>
+              <li>Pricing</li>
+              <li>Marketplace</li>
+              <li>Features</li>
+              <li>Integrations</li>
+            </ul>
+            <li>Company</li>
+            <ul class="two">
+              <li>About</li>
+              <li>Team</li>
+              <li>Blog</li>
+              <li>Careers</li>
+            </ul >
+            <li>Connect</li>
+            <ul class="three">
+              <li>Contact</li>
+              <li>Newsletter</li>
+              <li>LinkedIn</li>
+            </ul>
+          </ul>
+          <ul class="main-nav pull-right">
+            <li>Login</li>
+            <li>Sign Up</li>
+          </ul>
+        </div>
+        <h1>A modern publishing platform</h1>
+        <h2>Grow your audience and build your online brand</h2>
+  
+        <button> Start for Free</button>
+        <button>Learn More</button>
+      </div>
+      <div class="future">
+        <h2>Designed for the future</h2>
+        <img src="./images/illustration-editor-mobile.svg" <h2>Introducing an extensible editor</h2>
+        <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
+          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
+          change the looks of a blog.</p>
+  
+        <h2>Robust content management</h2>
+        <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog
+          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+  
+        <img src="./images/illustration-phones.svg">
+      </div>
+      <div class="art">
+        <h2>State of the Art Infrastructure</h2>
+        <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
+          This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+        <img src="./images/illustration-laptop-mobile.svg">
+      </div>
+      <div class="free">
+        <h2>Free, open, simple</h2>
+        <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports
+          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
+          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+  
+        <h2>Powerful tooling</h2>
+        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
+          breeze, but
+          capable of producing even the most complicated sites.</p>
+      </div>
+      <div class="footer">
+        <ul>
+          Product
+  
+          <li>Overview</li>
+          <li>Pricing</li>
+          <li>Marketplace</li>
+          <li>Features</li>
+          <li>Integrations</li>
+        </ul>
+        <ul>
+  
+          Company
+  
+          <li>About</li>
+          <li>Team</li>
+          <li>Blog</li>
+          <li>Careers
+  
+        </ul>
+        <li>Connect</li>
+        <ul>
+  
+          <li>Contact</li>
+          <li>Newsletter</li>
+          <li>LinkedIn</li>
+  
+        </ul>
+  
+        <ul>
+  
+          Login
+          Sign Up
+        </ul>
+  
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+          Coded by <a href="#">Your Name Here</a>.
+        </div>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
+  
+  </html>
